--- a/src/styles.css
+++ b/src/styles.css
@@ -29,9 +29,8 @@ input[type=text] {
 }
 
 textarea {
-  padding: .2rem 0 0 !important;
-  min-height: 2rem !important;
-  height: 2rem !important;
+  padding: .25rem 0 0 !important;
+  min-height: 1.5rem !important;
 }
 
 .capitalizeText {
